Temp fix for scrollbar issue in Style Book tabs.

--- a/packages/edit-site/src/components/editor-canvas-container/style.scss
+++ b/packages/edit-site/src/components/editor-canvas-container/style.scss
@@ -30,6 +30,6 @@
 	position: absolute;
 	right: $grid-unit-10;
 	top: math.div($grid-unit-60 - $button-size, 2); // ( tab height - button size ) / 2
-	z-index: 1;
+	z-index: 2;
 	background: $white;
 }
