--- a/packages/edit-site/src/components/style-book/style.scss
+++ b/packages/edit-site/src/components/style-book/style.scss
@@ -22,6 +22,8 @@
 	width: 100%;
 	padding-right: 56px;
 	display: flex;
+	position: absolute;
+	z-index: 1;
 }
 
 .edit-site-style-book__tabs {
